style: fix style for scrollbar

--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -36,9 +36,17 @@
 
 .item {
     padding: 1.2rem 2.4rem;
+    border-radius: 1.2rem;
+
+    &:hover {
+        cursor: pointer;
+        background-color: var(--base-white-05);
+    }
 }
 
 .link {
     appearance: none;
+    color: var(--base-white);
+    text-decoration: none;
     text-transform: uppercase;
 }
