--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,30 +7,54 @@
     @apply m-0 p-0;
 }
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--base-white-05) transparent;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--base-white-05);
+    border-radius: 1rem;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: var(--active);
+}
+
+
 html,
 body {
     color: var(--base-white);
     scroll-behavior: smooth;
     line-height: normal;
     background-color: var(--bg);
-    width: 100vw;
-    overflow: hidden;
     margin: 0;
-    height: 100%;
+    width: 100%;
     font-size: 10px;
+    position: relative;
+    overflow-y: auto;
+    height: 100%;
 }
 
-#root {
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-}
 
 li,
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 h1,
